# program-dependence-graph

./: .gitignore  .gitmodules  .vimrc  0001-Rearrange-stats-for-table2.patch  CMakeLists.txt  README.md  shell.nix
Edge_Specification/: example.c  example.ll  imported_funcs  kernel.idl  pdgragh.encrypt.dot  pdgragh.greeter.dot  pdgragh.initkey.dot  pdgragh.main.dot  test_encrypt_script.bc  test_encrypt_script.c  test_encrypt_script.ll
benchmarks/thttpd-2.29/: .conftest.o.bc  .dummy.o.bc  .fdwatch.o.bc  .libhttpd.o.bc  .match.o.bc  .mmc.o.bc  .tdate_parse.o.bc  .thttpd.o.bc  .thttpd.o.ll  .timers.o.bc  Makefile  config.cache  config.status  imported_funcs  kernel.idl  shared_struct_types  thttpd  thttpd.bc  thttpd.c  thttpd.ll
benchmarks/thttpd-2.29/cgi-src/: .phf.o.bc  .redirect.o.bc  .ssi.o.bc  Makefile  phf  redirect  ssi
benchmarks/thttpd-2.29/extras/: .htpasswd.o.bc  .makeweb.o.bc  Makefile  htpasswd  makeweb
benchmarks/wget-1.5.3/: .conftest.o.bc  Makefile  config.cache  config.status  mkinstalldirs
benchmarks/wget-1.5.3/doc/: Makefile
benchmarks/wget-1.5.3/po/: Makefile  Makefile.in  POTFILES  cs.gmo  de.gmo  hr.gmo  it.gmo  no.gmo  pt_BR.gmo
benchmarks/wget-1.5.3/src/: .cmpt.o.bc  .connect.o.bc  .fnmatch.o.bc  .ftp-basic.o.bc  .ftp-ls.o.bc  .ftp-opie.o.bc  .ftp.o.bc  .getopt.o.bc  .headers.o.bc  .host.o.bc  .html.o.bc  .http.o.bc  .init.o.bc  .log.o.bc  .main.o.bc  .main.o.ll  .md5.o.bc  .netrc.o.bc  .rbuf.o.bc  .recur.o.bc  .retr.o.bc  .url.o.bc  .utils.o.bc  .version.o.bc  Makefile  TAGS  config.h  imported_funcs  kernel.idl  main.c  wget  wget.bc  wget.ll
benchmarks/wget-1.5.3/util/: Makefile
bzip2/: CMakeLists.txt  README.md  appveyor.yml  bzip2-config.cmake.in  bzip2.c  prog.h  prog.proto  prog_client.c  prog_client.cc  prog_client_stub.h  prog_server.c  prog_server.cc
bzip2/cmake/: runtest.cmake
bzip2/setup/: bzip2.ll  exported_funcs  prog.proto  prog_client.cc  prog_server.cc
example/: Constants.h  GeolocateTelemetry.h  GpsDataReceive.h  OrionComm.h  OrionPublicPacket.h  OrionPublicProtocol.h  Types.h  dcm.h  earthrotation.h  linearalgebra.h  mathutilities.c  mathutilities.h  pdgragh.addAngles.dot  pdgragh.addAnglesf.dot  pdgragh.computeDateAndTimeFromWeekAndItow.dot  pdgragh.computeDateFromWeekAndItow.dot  pdgragh.computeTimeFromItow.dot  pdgragh.computeWeekAndItow.dot  pdgragh.fastCos.dot  pdgragh.fastISqrt.dot  pdgragh.fastSin.dot  pdgragh.fastSqrt.dot  pdgragh.firstOrderFilter.dot  pdgragh.firstOrderFilterf.dot  pdgragh.isLeapYear.dot  pdgragh.rateOfChangeLimitf.dot  pdgragh.subtractAngles.dot  pdgragh.subtractAnglesf.dot  pdgragh.testDateConversion.dot  pdgragh.wrapAngle.dot  pdgragh.wrapAngle360f.dot  pdgragh.wrapAngle90.dot  pdgragh.wrapAngle90f.dot  pdgragh.wrapAnglef.dot  quaternion.h
include/: AnalysisState.hpp  AtomicRegionAnalysis.hh  BoundaryAnalysis.hh  BoundaryPolicyGeneration.hh  CallWrapper.hh  ControlDependencyGraph.hh  DataAccessAnalysis.hh  DataDependencyGraph.hh  DebugInfoUtils.hh  ExtractFuncWithPtrParams.hh  FunctionSummary.hh  FunctionWrapper.hh  GenerateMonitor.hh  Graph.hh  GraphTraits.hh  GraphWriter.hh  GrpcGeneration.hh  InjectAttackPass.hh  KSplitCFG.hh  KSplitStatsCollector.hh  KSplitTaintAnalysis.hh  KSplitUtils.hh  LLVMEssentials.hh  LockAttackAnalysis.hh  MemInstrument.hh  PDGCallGraph.hh  PDGEdge.hh  PDGEnums.hh  PDGNode.hh  PDGUtils.hh  PTAWrapper.hh  ProgramDependencyGraph.hh  ProgramGraph.hh  RiskyAPIAnalysis.hh  RiskyBoundaryAPIAnalysis.hh  RiskyFieldAnalysis.hh  SharedDataAnalysis.hh  SharedFieldsAnalysis.hh  TaintBoundaryAnalysis.hh  TaintUtils.hh  (+4 more)
src/: .DataAccessAnalysis.cpp.swn  .DataAccessAnalysis.cpp.swo  .DataAccessAnalysis.cpp.swp  .DebugInfoUtils.cpp.swp  AnalysisState.cpp  AtomicRegionAnalysis.cpp  BoundaryAnalysis.cpp  BoundaryPolicyGeneration.cpp  CallWrapper.cpp  ControlDependencyGraph.cpp  DataAccessAnalysis.cpp  DataDependencyGraph.cpp  DebugInfoUtils.cpp  ExtractFuncWithPtrParams.cpp  FunctionSummary.cpp  FunctionWrapper.cpp  GenerateMonitor.cpp  Graph.cpp  GraphWriter.cpp  GrpcGeneration.cpp  InjectAttackPass.cpp  KSplitCFG.cpp  KSplitStatsCollector.cpp  KSplitTaintAnalysis.cpp  LockAttackAnalysis.cpp  MemInstrument.cpp  NesCheck.cpp  PDGCallGraph.cpp  PDGNode.cpp  PDGUtils.cpp  PTAWrapper.cpp  ProgramDependencyGraph.cpp  ProgramGraph.cpp  RiskyAPIAnalyis.cpp  RiskyBoundaryAPIAnalysis.cpp  RiskyFieldAnalysis.cpp  SharedDataAnalysis.cpp  SharedFieldsAnalysis.cpp  TaintBoundaryAnalysis.cpp  TaintUtils.cpp  (+2 more)
test/: alias.bc  build.sh  test_ind_call.c
test/ControlDependenceTests/: testIfElse.c  testSwitch.c  testWhile.c
test/ControlDependenceTests/bitcode/: pdgragh.main.dot  testIfElse.bc  testSwitch.bc  testWhile.bc
test/ControlDependenceTests/llvm_ll/: testIfElse.ll  testSwitch.ll  testWhile.ll
test/PtrArith/: testIntToPtr.c
test/PtrArith/bitcode/: testIntToPtr.bc
test/PtrArith/llvm_ll/: testIntToPtr.ll
test/SharedDataTests/: dummydrv.bc  dummydrv.ko.bc  dummydrv.ko.c  dummydrv_kernel.bc  dummydrv_kernel.c  header.h  imported_funcs
test/bitcode/: pdgragh.f.dot  pdgragh.main.dot  test_ind_call.bc
test/llvm_ll/: test_ind_call.ll
